# etude-pratique-CNNs

./: .gitignore  INSTALL.txt  README.md  pyproject.toml  requirements.txt
Integrated_Gradients/: main.py
LIME/: Faces.ipynb  Pytorch.ipynb  VGG19+LIME.ipynb  testVGG19.ipynb
common/: common.py
grad-cam/: README.md  pyproject.toml
grad-cam/grad-cam/: predict_batch.py  rename_all_files.py  reset_all_files.py  vgg19_gradcam.py
grad-cam/gradcam/: vgg19_gradcam.py
integrated-gradient/: integrated_gradients.ipynb
integrated-gradient/.ipynb_checkpoints/: integrated_gradients-checkpoint.ipynb
interface/: first.ui  gui.py
main/: evaluate_intersection.py  explanation.py  image_processing.py  load_coco_images.py  main.py
main/Integrated_Gradients/: IG.ipynb  ig.py  integrated_gradients.py  main.py  notes.txt  utils.py
main/LIME/: VGG19+LIME.ipynb  VGG19+LIME.py  VGG19_LIME.py
main/LIME/Jupyter/: Pytorch.ipynb
main/cocoapi/PythonAPI/: pycocoEvalDemo.ipynb
main/explanai/: db.sqlite3  manage.py
main/explanai/explanai/: asgi.py  settings.py  urls.py  wsgi.py
main/explanai/explanation-methods/: evaluate_intersection.py  explanation.py  image_processing.py  main.py  vgg19.py
main/explanai/utils/: evaluate_intersection.py  old.py  (+3 more)
main/gradcam/: reset_all_files.py  vgg19_gradcam.py
main/shap-method/: shap_explainer_module.py
shap-method/: IntermL_VGG19_SHAP.ipynb  Intermediate_layer_VGG16_SHAP.ipynb  shap_explainer_module.py  vgg19_shap.ipynb
webapp/: check.css  file_selection.css  grid.css  index.html  radio.css  script.js  styles.css  toolbar.css
(+71 files in other folders)
